Update: (Fixes #547) Sheet Subtitle added `.autofit-row` support so we can align buttons and other content to the left and right and added options to configure `$sheet-subtitle-heading-text-margin-bottom`, `$sheet-subtitle-heading-text-margin-top`
Update: (#547) Utilities `%autofit-row` shouldn't reset `margin-bottom`, it should be reset by the component that needs it

Update: (#547) Utilities added `.heading-start`, `.heading-text`, and `heading-end` for spacing and aligning text inside headings with the `.autofit-row` component, also added options to configure `$heading-spacer-x`, `$heading-text-margin-bottom`, `$heading-text-margin-top`

--- a/packages/clay/src/scss/components/_tbar.scss
+++ b/packages/clay/src/scss/components/_tbar.scss
@@ -10,6 +10,8 @@
 .tbar-nav {
 	@extend %autofit-row;
 
+	margin-bottom: 0;
+
 	> .tbar-item {
 		justify-content: center;
 	}
