--- a/packages/clay/src/scss/variables/_utilities.scss
+++ b/packages/clay/src/scss/variables/_utilities.scss
@@ -5,6 +5,13 @@ $inline-scroller-max-height: 125px !default;
 
 $autofit-col-expand-min-width: 3.125rem !default; // 50px
 
+// Heading
+
+$heading-spacer-x: 1rem; // 16px
+
+$heading-text-margin-bottom: auto;
+$heading-text-margin-top: auto;
+
 // Inline Item
 
 $inline-item-lexicon-icon-margin-top: -0.21429em !default;
